# MultiAgentic_MarketResearch_GenAiUseCaseGeneration

./: GenAi_Resources.md  Implementation_Resources.md  Market_Report.md  Usecase_Report.md  crew.py  main.py  pyproject.toml  tools.py
config/: agents.yaml  tasks.yaml
